src/index.css
@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
@import 'tailwindcss';

@theme {
  --color-text: hsl(221 25% 27%);
  --color-background: hsl(240 20% 99%);
  --color-primary: hsl(229 86% 70%);
  --color-secondary: hsl(211 100% 94%);
  --color-accent: hsl(354 83% 66%);
}

@tailwind base;
@tailwind components;
@tailwind utilities;


:root {
  color:#242424;
  background-color: rgba(255, 255, 255, 0.87);

}

#root{
  font-family: "Archivo", "Times New Roman";
}

